--- a/main-style.css
+++ b/main-style.css
@@ -17,11 +17,17 @@
 }
 
 #main > table > tbody > tr > td {
-  height: 7px;
-  width: 7px;
+  height: 10px;
+  width: 10px;
+  overflow: hide;
+  padding: 0;
   background-color: gray;
   border: 1px solid black;
   content: "&nbsp;";
+  font-size: 6pt;
+  font-family: Courier, Monospace;
+  text-align: center;
+  vertical-align: middle;
 }
 
 #main > table > tbody > tr > td.player {
