--- a/main-style.css
+++ b/main-style.css
@@ -1,8 +1,7 @@
 #player {
-  display: none;
   float: left;
-  position: relative;
-  z-index: 1;
+  clear: both;
+  position: absolute;
   border: 2px solid black;
   width: 250px;
   content: "&nbsp;";
@@ -38,4 +37,26 @@
 }
 #main > table > tbody > tr > td.npc {
   background-color: green;
+}
+
+td > .information {
+  position: absolute;
+  display: none;
+  width: 150px;
+  height: 150px;
+  background: #777777;
+  border: 1px solid black;
+}
+td:hover > .information {
+  display: block;
+  z-index: 10;
+}
+
+.Dragable {
+  cursor: move;
+  -moz-user-select: -moz-none;   
+  -khtml-user-select: none;   
+  -webkit-user-select: none;   
+  -o-user-select: none;   
+  user-select: none;
 }
